--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             </div>
             <div class="shortcut-links">
                 <p>Your Shortcuts</p>
-                <a href="#"><img src="Images/shortcut-1.png" alt=""> Web Developers</a>
-                <a href="#"><img src="Images/shortcut-2.png" alt=""> Web Developers</a>
-                <a href="#"><img src="Images/shortcut-3.png" alt=""> Web Developers</a>
-                <a href="#"><img src="Images/shortcut-4.png" alt=""> Web Developers</a>
+                <a href="#"><img src="Images/shortcut-1.png" alt=""> Handicrafts </a>
+                <a href="#"><img src="Images/shortcut-2.png" alt=""> Handlooms & Clothings </a>
+                <a href="#"><img src="Images/shortcut-3.png" alt=""> Paintings </a>
+                <a href="#"><img src="Images/shortcut-4.png" alt=""> Households </a>
             </div>
         </div>
 
@@ -121,17 +121,17 @@
 
                 <div class="story story-3">
                     <img src="Images/member-2.png" alt="">
-                    <p>Post Story</p>
+                    <p>Nishal Tandia</p>
                 </div>
 
                 <div class="story story-4">
                     <img src="Images/member-3.png" alt="">
-                    <p>Post Story</p>
+                    <p>Kshitij Painkra</p>
                 </div>
 
                 <div class="story story-5">
                     <img src="Images/member-4.png" alt="">
-                    <p>Post Story</p>
+                    <p>Subham Verma</p>
                 </div>
 
             </div>
@@ -358,21 +358,21 @@
                 <div class="online">
                     <img src="Images/member-1.png">
                 </div>
-                <p>Ayush Jha</p>
+                <p>Nitya</p>
             </div>
 
             <div class="online-list">
                 <div class="online">
                     <img src="Images/member-2.png">
                 </div>
-                <p>Ayush Jha</p>
+                <p>Shudhanshu Upadhaya</p>
             </div>
 
             <div class="online-list">
                 <div class="online">
                     <img src="Images/member-3.png">
                 </div>
-                <p>Ayush Jha</p>
+                <p>Subham Bagde</p>
             </div>
 
         </div>
