--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </form>
                     <a href="#">Forget Password?</a>
                     <a href="#" class="btn" onclick="openRegister()">I'm new here</a>
-                    <a href="registration.html" target="blank"><button type="button">Register Now</button></a>
+                    <a href="http://localhost/PHP/Tribzzz/registration.php" target="blank"><button type="button">Register Now</button></a>
                 </div>
                 <div class="card-back">
                     <h2>REGISTER</h2>
