--- a/home.html
+++ b/home.html
@@ -90,9 +90,9 @@
             <div class="imp-links">
                 <a href="#"><img src="Images/news.png"> Latest News </a>
                 <a href="#"><img src="Images/friends.png"> Friends </a>
-                <a href="#"><img src="Images/group.png"> Community </a>
-                <a href="#"><img src="Images/marketplace.png"> Market Place </a>
-                <a href="#"><img src="Images/watch.png"> Watch </a>
+                <a href="https://www.facebook.com/groups/feed/"><img src="Images/group.png"> Community </a>
+                <a href="https://www.facebook.com/marketplace?ref=bookmark"><img src="Images/marketplace.png"> Market Place </a>
+                <a href="https://www.facebook.com/watch/?ref=tab"><img src="Images/watch.png"> Watch </a>
                 <a href="#"> See More</a>
             </div>
             <div class="shortcut-links">
